--- a/Manager/prometheus-grafana/docker-compose.yaml
+++ b/Manager/prometheus-grafana/docker-compose.yaml
@@ -35,3 +35,11 @@ services:
     env_file:
       - ./grafana/config.monitoring
     restart: always
+
+#   need fixes for caliper before this can be used
+#   pushgateway:
+#     image: prom/pushgateway
+#     container_name: pushgateway
+#     ports:
+#       - 9091:9091
+#     restart: always
