improved the worker config-network-config and manager run config file
Signed-off-by: fraVlaca <ocsenarf@outlook.com>

--- a/Worker/sut-network-template.yaml
+++ b/Worker/sut-network-template.yaml
@@ -22,8 +22,8 @@ organizations:
             ${UserPem}
     peers:
       - endpoint: ${PeerEndpoint}
-        grpcOptions:
-          ssl-target-name-override: ${PeerOverride}
+        grpcOptions: 
+          ${PeerOverride}
           grpc.keepalive_time_ms: 600000
         tlsCACerts:
           pem: |-
