--- a/Automated/ansible/playbooks/80-start-stop-observing.yaml
+++ b/Automated/ansible/playbooks/80-start-stop-observing.yaml
@@ -51,13 +51,26 @@
         image: prom/prometheus:v2.32.1
         state: absent
 
+    - name: Stop the grafana server
+      when: "'serverstop' in plays"
+      docker_container:
+        name: grafana_monit
+        image: grafana/grafana:8.3.4
+        state: absent
+
     - name: Ensure prometheus data folder is empty
       include_role:
         name: util/ensure_empty_folder
       vars:
         path: /root/prometheus-data
       when: "'serverstart' in plays"
-  # TODO: Stop the grafana server
+
+    - name: Ensure grafana data folder is empty
+      include_role:
+        name: util/ensure_empty_folder
+      vars:
+        path: /root/grafana-data
+      when: "'serverstart' in plays"
 
 # unfortunately this won't work in the docker deployment as the volume mounts use the host filesystem and not
 # the container filesystem (as the daemon used is the host daemon), also the network specified is not correct
@@ -66,8 +79,10 @@
 # 1. maybe have a /root/.../ subdir and ensure the files are on the host file system and have a variable to control the network
 # 2. run these natively
 # 3. try true DinD
+# for now you need to start it manually from the host environment (see READMe.md in Automated directory)
+
     - name: Start the prometheus server
-      when: "'serverstart'in plays"
+      when: ansible_connection != "docker" and 'serverstart'in plays
       shell: docker run -d --user root                                         \
                 -v /root/prometheus.yml:/etc/prometheus/prometheus.yml         \
                 -v /root/prometheus-data:/prometheus                           \
@@ -76,7 +91,7 @@
                prom/prometheus:v2.32.1
 
     - name: Start grafana
-      when: "'serverstart'in plays"
+      when: ansible_connection != "docker" and "'serverstart'in plays"
       shell: docker run -d --user root                                         \
                 -v /root/grafana/provisioning:/etc/grafana/provisioning        \
                 -v /root/grafana-data:/var/lib/grafana                         \
