--- a/Automated/ansible/playbooks/includes/create-anchor-peer.yaml
+++ b/Automated/ansible/playbooks/includes/create-anchor-peer.yaml
@@ -1,4 +1,4 @@
-# Not idemopotent as it will fail if already added
+# TODO: Not idemopotent as it will fail if already added
 
 - name: fetch channel config
   shell: |
