--- a/Automated/ansible/site-vm.yaml
+++ b/Automated/ansible/site-vm.yaml
@@ -1,5 +1,5 @@
 #!/usr/bin/env ansible-playbook
-- import_playbook: playbooks/5-docker-prereqs.yaml
+- import_playbook: playbooks/5-vm-prereqs.yaml
   when: 'plays=="all" or ("docker" in plays)'
 
 - import_playbook: playbooks/10-common-prereqs.yaml
