--- a/Automated/ansible/inventory/docker/hosts.yaml
+++ b/Automated/ansible/inventory/docker/hosts.yaml
@@ -15,6 +15,8 @@ all:
                 ordererOrg0:
                     hosts:
                         orderer0: { ansible_host: orderer0 }
+#                        orderer1: { ansible_host: orderer1 }
+#                        orderer2: { ansible_host: orderer2 }
         clients:
             hosts:
                  client0: { ansible_host: client0 }
