--- a/Automated/provision-vms/docker/docker-compose.yaml
+++ b/Automated/provision-vms/docker/docker-compose.yaml
@@ -29,6 +29,14 @@ services:
     <<: *base
     container_name: orderer0
 
+  orderer1:
+    <<: *base
+    container_name: orderer1
+
+  orderer2:
+    <<: *base
+    container_name: orderer2
+
   # clients
   client0:
     <<: *base
