fixes for VM deployment
Signed-off-by: D <d_kelsey@uk.ibm.com>

--- a/Automated/ansible/ansible.cfg
+++ b/Automated/ansible/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 
-inventory = ./inventory/docker/hosts.yaml
-#inventory = ./inventory/vm/hosts.yaml
+#inventory = ./inventory/docker/hosts.yaml
+inventory = ./inventory/vm/hosts.yaml
 roles_path = ./roles:./playbooks/roles
 
 gathering = smart
