--- a/Automated/ansible/inventory/docker/hosts.yaml
+++ b/Automated/ansible/inventory/docker/hosts.yaml
@@ -20,3 +20,4 @@ all:
         clients:
             hosts:
                  client0: { ansible_host: client0 }
+                 client1: { ansible_host: client1 }
