--- a/Automated/provision-vms/docker/docker-compose.yaml
+++ b/Automated/provision-vms/docker/docker-compose.yaml
@@ -29,13 +29,13 @@ services:
     <<: *base
     container_name: orderer0
 
-  orderer1:
-    <<: *base
-    container_name: orderer1
+#  orderer1:
+#    <<: *base
+#    container_name: orderer1
 
-  orderer2:
-    <<: *base
-    container_name: orderer2
+#  orderer2:
+#    <<: *base
+#    container_name: orderer2
 
   # clients
   client0:
@@ -45,6 +45,10 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./shared-files/crypto-config:/root/crypto-config
       - ./shared-files/channel-artifacts:/root/channel-artifacts
+
+  client1:
+    <<: *base
+    container_name: client1
 
   controller:
     <<: *base
