--- a/Automated/ansible/playbooks/includes/create-anchor-peer.yaml
+++ b/Automated/ansible/playbooks/includes/create-anchor-peer.yaml
@@ -16,6 +16,11 @@
       CORE_PEER_TLS_KEY_FILE: /root/crypto-config/peerOrganizations/{{ peer_org }}/peers/{{ peer_name }}/tls/server.key
       CORE_PEER_TLS_CERT_FILE: /root/crypto-config/peerOrganizations/{{ peer_org }}/peers/{{ peer_name }}/tls/server.crt
       CORE_PEER_TLS_ROOTCERT_FILE: /root/crypto-config/peerOrganizations/{{ peer_org }}/peers/{{ peer_name }}/tls/ca.crt
+  retries: 3
+  delay: 3
+  register: result
+  until: result.rc == 0
+
   # temporary skip code
   # when: create_file is defined and create_file == '1'
 
