--- a/Automated/ansible/playbooks/10-common-prereqs.yaml
+++ b/Automated/ansible/playbooks/10-common-prereqs.yaml
@@ -69,12 +69,14 @@
         src: "https://github.com/ncabatoff/process-exporter/releases/download/v0.7.10/process-exporter-0.7.10.linux-amd64.tar.gz"
         dest: /tmp
         remote_src: true
+        creates: /tmp/process-exporter-0.7.10.linux-amd64/process-exporter
 
     - name: Install prometheus process exporter
       copy:
         src: /tmp/process-exporter-0.7.10.linux-amd64/process-exporter
         dest: /root/go/bin
         mode: preserve
+        force: no
         remote_src: true
 
     - name: Copy the process exporter config
