--- a/Automated/ansible/playbooks/roles/peer/tasks/main.yaml
+++ b/Automated/ansible/playbooks/roles/peer/tasks/main.yaml
@@ -24,7 +24,7 @@
       CORE_CHAINCODE_GOLANG_RUNTIME: 'hyperledger/fabric-baseos:2.4' # instantiation fails without this.
       CORE_OPERATIONS_LISTENADDRESS: 0.0.0.0:9443
       CORE_METRICS_PROVIDER: prometheus
-      CORE_PEER_PROFILE_ENABLED: false #true - override via "peer_env_vars" if required
+      CORE_PEER_PROFILE_ENABLED: '{{ enable_fabric_profile }}'
 
       CORE_PEER_ID: '{{ peer_name }}'
       CORE_PEER_ADDRESS: '0.0.0.0:7051'
