--- a/Automated/ansible/playbooks/45-deploy-caliper.yaml
+++ b/Automated/ansible/playbooks/45-deploy-caliper.yaml
@@ -39,6 +39,7 @@
   - name: Pull down mosquitto
     docker_image:
       name: eclipse-mosquitto:latest
+      source: pull
 
   - name: Copy the mosquitto config
     copy:
