--- a/Automated/ansible/playbooks/80-start-stop-observing.yaml
+++ b/Automated/ansible/playbooks/80-start-stop-observing.yaml
@@ -50,18 +50,7 @@
 #      args:
 #        chdir: /root
 
-- name: Control mosquitto broker
-  hosts: client0
-  remote_user: root
-  tasks:
-    - name: Stop mosquitto
-      when: "'serverstop' in plays"
-      docker_container:
-        name: mqtt
-        image: eclipse-mosquitto:latest
-        state: absent
-
-- name: Control prometheus server
+- name: Control prometheus/grafana servers
   hosts: client0
   remote_user: root
   tasks:
@@ -102,14 +91,6 @@
 # 3. try true DinD
 # for now you need to start it manually from the host environment (see READMe.md in Automated directory)
 
-    - name: Start the mosquitto server
-      when: ansible_connection != "docker" and 'serverstart'in plays
-      shell: docker run -d --user root                                         \
-                -v /root/mosquitto:/mosquitto/config                           \
-               --network host                                                  \
-               --name mqtt                                                     \
-               eclipse-mosquitto:latest
-
     - name: Start the prometheus server
       when: ansible_connection != "docker" and 'serverstart'in plays
       shell: docker run -d --user root                                         \
@@ -129,8 +110,3 @@
                --network host                                                  \
                --name grafana_monit                                            \
                grafana/grafana:8.3.4
-
-
-
-
-
