--- a/Automated/provision-vms/docker/Dockerfile.controller
+++ b/Automated/provision-vms/docker/Dockerfile.controller
@@ -3,7 +3,7 @@ FROM ubuntu:20.04
 # Update and upgrade repo
 RUN apt-get update -y -q && \
     # apt-get upgrade -y -q && \
-    apt-get install -y ansible python3-pip apt-transport-https vim nano zip tmux
+    apt-get install -y ansible python3-pip apt-transport-https vim nano zip tmux sshpass
 
 RUN DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get -y install tzdata
 
